metadata/tests/compile_fail/init_without_behavior.stderr
error[E0277]: the trait bound `quasar_metadata::MetadataAccount: quasar_lang::prelude::Space` is not satisfied
  --> tests/compile_fail/init_without_behavior.rs:17:19
   |
17 |     pub metadata: Account<MetadataAccount>,
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `quasar_lang::prelude::Space` is not implemented for `quasar_metadata::MetadataAccount`
   |
   = help: the following other types implement trait `quasar_lang::prelude::Space`:
             InterfaceAccount<T>
             Migration<From, To>
             quasar_lang::accounts::Account<T>
   = note: required for `quasar_lang::accounts::Account<quasar_metadata::MetadataAccount>` to implement `quasar_lang::prelude::Space`

error[E0271]: type mismatch resolving `<Account<MetadataAccount> as AccountInit>::InitParams<'_> == ()`
  --> tests/compile_fail/init_without_behavior.rs:17:19
   |
17 |     pub metadata: Account<MetadataAccount>,
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^ expected `()`, found `MetadataInitParams<'_>`
   |
note: required by a bound in `quasar_lang::ops::init::Op::<'a, P>::apply`
  --> $WORKSPACE/lang/src/ops/init.rs
   |
   |     pub fn apply<F: AccountLoad + AccountInit<InitParams<'a> = P>>(
   |                                               ^^^^^^^^^^^^^^^^^^ required by this bound in `Op::<'a, P>::apply`

error[E0080]: evaluation panicked: field `metadata` requires an init-param behavior (e.g., token(...) or mint(...))
 --> tests/compile_fail/init_without_behavior.rs:7:10
  |
7 | #[derive(Accounts)]
  |          ^^^^^^^^ evaluation of `<BadInit as quasar_lang::traits::ParseAccountsUnchecked<'input>>::parse_with_instruction_data_unchecked::_` failed here
